--- a/index.html
+++ b/index.html
@@ -78,19 +78,25 @@
         </div>
     </section>
 
-    <section id="certificates" class="section-padding hidden">
-        <h2 class="section-title">Certificates</h2>
-        <div class="card-container">
-            <div class="card hidden">
-                <h3>Volunteer Certificate</h3>
-                <p>Details about your volunteering experience...</p>
+    <section id="certificates" class="section-padding bg-light">
+    <h2 class="section-title">Certificates</h2>
+    
+    <div class="slider-container">
+        <div class="slider">
+            
+            <div class="slide">
+                <img src="cert1.jpg" alt="Volunteer Certificate">
+                <div class="slide-info">Volunteer Certificate</div>
             </div>
-            <div class="card hidden">
-                <h3>Illuminate Certificate</h3>
-                <p>Details about the Illuminate workshop...</p>
+
+            <div class="slide">
+                <img src="cert2.png" alt="Illuminate Certificate">
+                <div class="slide-info">Illuminate Certificate</div>
             </div>
-        </div>
-    </section>
+
+            </div>
+    </div>
+</section>
 
     <section id="projects" class="section-padding hidden">
         <h2 class="section-title">Projects</h2>
