--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <li><a href="#introduction">Introduction</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#certificates">Certificates</a></li> <li><a href="#projects">Projects</a></li>
+        <li><a href="#certificates">Certificates</a></li> 
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#contact">Contact & Feedback</a></li>
     </ul>
@@ -93,8 +94,7 @@
                 <img src="cert2.png" alt="Illuminate Certificate">
                 <div class="slide-info">Illuminate Certificate</div>
             </div>
-
-            </div>
+        </div>
     </div>
 </section>
 
